--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,9 +1,5 @@
 <ul>
-<% @restaurants.find_all do |r| %>
-<% if @user.age < 18 %>
- 	<li> <%= r.name if r.serves_alcohol == false %> </li>
-<% else %> 
- 	<li> <%= r.name if r.serves_alcohol == true %> </li>
- 	<% end %>
+<% @restaurants.each do |r| %>
+ 	<li> <%= r.name %> </li>
 <% end %>   
 </ul>
